ecmascript/parser/tests/test262-error-references/fail/e07ef2bccb56a292.module.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/e07ef2bccb56a292.module.js:1:9
  |
1 | export {,,}
  |         ^

